# la-patate-chaude

./: .editorconfig  .gitignore  Cargo.toml  La patate chaude.pptx  README.md  question.md  recover_secret.md
.github/workflows/: rust.yml
client/: Cargo.toml
client/src/: main.rs  strategies.rs  ui.rs
data/: mazes.txt
hashcash/: Cargo.toml
hashcash/benches/: hashcash_bench.rs
hashcash/src/: config.rs  dto.rs  hashcash.rs  lib.rs  utils.rs
monstrous_maze/: Cargo.toml
monstrous_maze/benches/: monstrous_maze_bench.rs
monstrous_maze/data/: mazes_answers.txt
monstrous_maze/src/: challenge_generator.rs  challenge_resolve.rs  lib.rs  main.rs  models.rs
recover_secret/: Cargo.toml
recover_secret/benches/: recover_secret_bench.rs
recover_secret/src/: challenge_generator.rs  challenge_resolve.rs  file_utils.rs  lib.rs  main.rs  models.rs  string_utils.rs
server/: Cargo.toml
server/src/: args.rs  exchanger.rs  game.rs  main.rs  message_handler.rs  player.rs  round.rs  server.rs  utils.rs
shared/: Cargo.toml
shared/src/: challenge.rs  config.rs  lib.rs  message.rs  public_player.rs  recover_secret_challenge.rs  result_type.rs  subscribe.rs
src/: arch.md  main.rs  message.rs
src/client/: main.rs
utils/: Cargo.toml
utils/src/: file_utils.rs  lib.rs  string_utils.rs
