[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
rand = "0.8.4"
serde_json = "1.0"
log = "0.4"
pretty_env_logger = "0.4.0"
num_cpus = "1.13.1"
clap = { version = "3.2.8", features = ["derive"] }
shared = { path = "../shared" }
hashcash = { path = "../hashcash" }
utils = { path = "../utils" }