[package]
name = "monstrous_maze"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = "0.3"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
utils = { path = "../utils" }
log = "0.4"
rand = "0.8.4"
pretty_env_logger = "0.4.0"

[[bench]]
name = "monstrous_maze_bench"
harness = false