[package]
name = "recover_secret"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = "0.3"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
utils = { path = "../utils" }
rand = "0.8.4"

[[bench]]
name = "recover_secret_bench"
harness = false