[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
rand = "0.8"
serde_json = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
shared = { path = "../shared" }
clap = { version = "3.2.8", features = ["derive"] }
hashcash = { path = "../hashcash" }
recover_secret = { path = "../recover_secret" }
monstrous_maze = { path = "../monstrous_maze" }